# turf

./: .gitignore  LICENSE  README.md
api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
api/app/: chat_manager.py  config.py  database.py  deps.py  main.py  models.py  routes.py  schemas.py  security.py
api/app/templates/: base.html  home.html  login.html  register.html
infra/: docker-compose.yml
web/: .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
web/src/components/: AddressAutocomplete.tsx  ChatPanel.tsx  Map.tsx  RoomPanel.tsx  SiteLayout.tsx
web/src/lib/: api.ts  prefabs.ts  seo.ts
web/src/pages/: 404.tsx  _app.tsx  about.tsx  app.tsx  claims.tsx  index.tsx  login.tsx  privacy.tsx  profile.tsx  settings.tsx  terms.tsx
web/src/pages/profile/: [userId].tsx
web/src/styles/: globals.css
